--- a/Project.toml
+++ b/Project.toml
@@ -1,3 +1,6 @@
 name = "toolbox"
-uuid = "7781f4b9-0ba3-4b3e-a982-d971b817e3a7"  
+uuid = "7781f4b9-0ba3-4b3e-a982-d971b817e3a7"
 version = "0.1.0"
+
+[deps]
+DSP = "717857b8-e6f2-59f4-9121-6e50c889abd2"
